tests/success/builtin_construct_move.bz
import std::utils;

function main()
{
	const p = std::malloc(int32, 1u);
	let n = 3;
	__builtin_inplace_construct(p, move n);
	std::free(p);
}
