tests/error/comptime/compare_pointers9.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 3);
		const q = p + 2;
		__builtin_comptime_free(p);

		p < q;
	});
}
